<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email"
            android:layout_margin="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:inputType="textPersonName"
            android:id="@+id/etNames"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterNames"
            android:layout_margin="10dp" />

        <EditText
            android:inputType="text"
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"

            android:layout_margin="10dp"/>
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:text="@string/logout"
            android:layout_height="wrap_content"/>

    </LinearLayout>

